WIP fixing blueprint not showing up in context

--- a/registrations/static/registrations/css/procreg.css
+++ b/registrations/static/registrations/css/procreg.css
@@ -49,3 +49,11 @@
 .flex-end {
   align-self: flex-end;
 }
+
+.pr-main {
+  min-height: 600px;
+}
+
+.space-top {
+  margin-top: 3rem;
+}
